# Server-Monitor

./: .gitignore  Cargo.toml  README.MD  config.json
public/: index.html  script.js  style.css
public/js/: api.js  app.js  render.js  state.js  utils.js
src/: api.rs  config.rs  engine.rs  main.rs  models.rs  redis_manager.rs  utils.rs
src/api/: handlers.rs  mod.rs
src/config/: types.rs
src/engine/: checks.rs  mod.rs  notifications.rs
