[package]
name = "monitor_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
surge-ping = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10.0"
reqwest = { version = "0.12", features = ["json"] }
colored = "2.1"
tokio-util = { version = "0.7", features = ["full"] }
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }
serde_json = "1.0.149"
ipnet = "2.11.0"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
hickory-resolver = "0.25"
